# llmops-gateway

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  BENCHMARKS.md  DEMO.md  DESIGN_DECISIONS.md  PRODUCTION_ROADMAP.md  RELEASE_v1.0.0-beta.1.md  RESUME.md  RESUME_BULLETS.md  generate_resume_pdf.py
infra/docker/: otel-collector-config.yaml
infra/prometheus/: prometheus.yml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_seed_defaults.py  0003_seed_dev_api_key.py  0004_adapter_routes.py  0005_adapter_canary_percent.py
scripts/: benchmark_gateway.py  demo.sh  docker-entrypoint.sh
src/llmops_gateway/: __init__.py  main.py
src/llmops_gateway/api/: deps.py
src/llmops_gateway/caching/: hashing.py  qdrant_semantic_cache.py  redis_exact_cache.py
src/llmops_gateway/clients/: http_pool.py  qdrant_client.py  redis_client.py
src/llmops_gateway/config/: logging.py  settings.py  validation.py
src/llmops_gateway/embeddings/: api_provider.py  base.py  factory.py  local_provider.py
src/llmops_gateway/middleware/: auth.py  error_handling.py  exempt_paths.py  scopes.py  (+2 more)
tests/: conftest.py
tests/integration/: test_local_embedding_provider_integration.py
tests/unit/: test_admin_repositories.py  test_anthropic_provider.py  test_api_key_repository.py  test_api_key_security.py  test_auth_middleware.py  test_auth_service.py  test_base_provider.py  test_cache_service.py  test_circuit_breaker.py  test_cost_service.py  test_gateway_service.py  test_hashing.py  test_health_service.py  test_local_embedding_provider.py  test_openai_provider.py  test_otel_trace_exporter.py  test_pricing_repository.py  test_qdrant_semantic_cache.py  test_rate_limit_service.py  test_redis_exact_cache.py  test_request_persistence_repositories.py  test_routing_service.py  test_scopes.py  test_settings_api_keys.py  test_settings_validation.py  test_trace_persistence_service.py  test_tracing_service.py  test_worker_payloads.py
(+67 files in other folders)
