[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmops-gateway"
version = "0.1.0"
description = "Production-grade LLMOps Gateway & Observability Platform: async multi-provider LLM gateway with dual-layer semantic caching, cost tracking, and tracing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "qdrant-client>=1.10",
    "httpx>=0.27",
    "tiktoken>=0.7",
    "sentence-transformers>=3.0",
    "openai>=1.40",
    "anthropic>=0.34",
    "opentelemetry-api>=1.26",
    "opentelemetry-sdk>=1.26",
    "opentelemetry-exporter-otlp>=1.26",
    "opentelemetry-instrumentation-fastapi>=0.47b0",
    "arq>=0.26",
    "structlog>=24.4",
    "tenacity>=9.0",
    "prometheus-client>=0.20",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "httpx>=0.27",
    "fakeredis>=2.24",
    "locust>=2.31",
    "numpy>=1.26",
    "aiosqlite>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llmops_gateway"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
# B008: FastAPI's `Depends(...)` as a default argument is the idiomatic pattern.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: exercises a real local backend (e.g. downloads/loads the sentence-transformers model) instead of a fake/in-memory one; excluded from the default run for speed.",
]
addopts = "-m 'not integration'"
